cmake_minimum_required(VERSION 3.10)
project(jkpak CXX)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()
add_executable(jkpak src/download.cpp src/lib.cpp src/main.cpp src/pkg.cpp src/config.cpp src/unzip.cpp src/util.cpp)
set_target_properties(jkpak PROPERTIES CXX_STANDARD 17)
target_link_libraries(jkpak ${CONAN_LIBS})
install(TARGETS jkpak DESTINATION bin)
